--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -5,4 +5,13 @@ permalink: /teaching/
 author_profile: true
 ---
 
-Coming soon...
+
+September-December 2024 : lectures courses + working classes of ’Calculus’ for L1 students specialized in
+physics, chemistry, engineering sciences and health
+
+June 2024 : organize a one-day internship for L1 students in sciences : introduce them to my
+subject and prepare activities about it
+
+May 2024 : organization of the ’Maths en jean’ congress at the FDS, for middle school students
+
+April-May 2024 : Tutoring ’Tools for simulation (Python)’ for fundamental physics L3 students
